--- a/documentation/operators/create.html
+++ b/documentation/operators/create.html
@@ -30,13 +30,14 @@ id: create
 <h4>See Also</h4>
 <ul>
  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/04_CreatingObservableSequences.html#ObservableCreate"><cite>Introduction to Rx</cite>: Create</a></li>
+ <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/04_CreatingObservableSequences.html#ObservableGenerate"><cite>Introduction to Rx</cite>: Generate</a></li>
 </ul>
 
 <h2>Language-Specific Information:</h2>
 
 <div class="panel-group operators-by-language" id="accordion" role="tablist" aria-multiselectable="true">
 
-  {% lang_operator RxClojure %}
+  {% lang_operator RxClojure generator %}
     <p>
      <span style="color:#f00">TBD</span>
     </p>
@@ -145,7 +146,7 @@ Sequence complete.</pre></div>
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJS create createWithDisposable %}
+  {% lang_operator RxJS create createWithDisposable generate generateWithAbsoluteTime generateWithRelativeTime %}
     <figure class="variant">
      <img src="images/create.png" width="640" alt="create" />
      <figcaption><p>
@@ -200,6 +201,146 @@ Completed</pre></div>
      </ul>
      </figcaption>
     </figure>
+    <figure class="variant">
+     <img src="images/generate.png" width="640" alt="generate" />
+     <figcaption><p>
+      You can use the <code>generate</code> operator to create simple Observables that can generate their
+      next emissions, and can determine when to terminate, based on the value of the previous emission. The
+      basic form of <code>generate</code> takes four parameters:
+     </p><ol>
+      <li>the first item to emit</li>
+      <li>a function to test an item to determine whether to emit it (<code>true</code>) or terminate the
+          Observable (<code>false</code>)</li>
+      <li>a function to generate the next item to test and emit based on the value of the previous item</li>
+      <li>a function to transform items before emitting them</li>
+     </ol><p>
+      You can also pass in as an optional fifth parameter a <a href="../scheduler.html">Scheduler</a> that
+      <code>generate</code> will use to create and emit its sequence (it uses <code>currentThread</code> by
+      default).
+     </p>
+     <h4>Sample Code</h4>
+     <div class="code javascript"><pre>
+var source = Rx.Observable.generate(
+    0,
+    function (x) { return x < 3; },
+    function (x) { return x + 1; },
+    function (x) { return x; }
+);
+
+var subscription = source.subscribe(
+    function (x) { console.log('Next: ' + x); },
+    function (err) { console.log('Error: ' + err); },
+    function () { console.log('Completed'); });</pre></div>
+     <div class="output"><pre>
+Next: 0
+Next: 1
+Next: 2
+Completed</pre></div>
+     <p>
+      <code>generate</code> is found in the following distributions:
+     </p>
+     <ul>
+      <li><code>rx.js</code></li>
+      <li><code>rx.compat.js</code></li>
+      <li><code>rx.lite.js</code></li>
+      <li><code>rx.lite.compat.js</code></li>
+     </ul>
+     </figcaption>
+    </figure>
+    <figure class="variant">
+     <img src="images/generateWithRelativeTime.png" width="640" alt="generateWithRelativeTime" />
+     <figcaption><p>
+      You can use the <code>generateWithRelativeTime</code> operator to create simple Observables that can
+      generate their next emissions, and can determine when to terminate, based on the value of the previous
+      emission. The basic form of <code>generateWithRelativeTime</code> takes five parameters:
+     </p><ol>
+      <li>the first item to emit</li>
+      <li>a function to test an item to determine whether to emit it (<code>true</code>) or terminate the
+          Observable (<code>false</code>)</li>
+      <li>a function to generate the next item to test and emit based on the value of the previous item</li>
+      <li>a function to transform items before emitting them</li>
+      <li>a function to indicate how long, in milliseconds, the generator should wait after the emission of
+          the previous item before emitting this item</li>
+     </ol><p>
+      You can also pass in as an optional sixth parameter a <a href="../scheduler.html">Scheduler</a> that
+      <code>generate</code> will use to create and emit its sequence (it uses <code>currentThread</code> by
+      default).
+     </p>
+     <h4>Sample Code</h4>
+     <div class="code javascript"><pre>
+var source = Rx.Observable.generateWithRelativeTime(
+    1,
+    function (x) { return x < 4; },
+    function (x) { return x + 1; },
+    function (x) { return x; },
+    function (x) { return 100 * x; }
+).timeInterval();
+
+var subscription = source.subscribe(
+    function (x) { console.log('Next: ' + x); },
+    function (err) { console.log('Error: ' + err); },
+    function () { console.log('Completed'); });</pre></div>
+     <div class="output"><pre>
+Next: {value: 1, interval: 100}
+Next: {value: 2, interval: 200}
+Next: {value: 3, interval: 300}
+Completed</pre></div>
+     <p>
+      <code>generateWithRelativeTime</code> is found in the following distributions:
+     </p>
+     <ul>
+      <li><code>rx.lite.js</code></li>
+      <li><code>rx.lite.compat.js</code></li>
+      <li><code>rx.time.js</code> (requires <code>rx.js</code> or <code>rx.compat.js</code>)</li>
+     </ul>
+     </figcaption>
+    </figure>
+    <figure class="variant">
+     <img src="images/generateWithAbsoluteTime.png" width="640" alt="generateWithAbsoluteTime" />
+     <figcaption><p>
+      You can use the <code>generateWithAbsoluteTime</code> operator to create simple Observables that can
+      generate their next emissions, and can determine when to terminate, based on the value of the previous
+      emission. The basic form of <code>generateWithAbsoluteTime</code> takes five parameters:
+     </p><ol>
+      <li>the first item to emit</li>
+      <li>a function to test an item to determine whether to emit it (<code>true</code>) or terminate the
+          Observable (<code>false</code>)</li>
+      <li>a function to generate the next item to test and emit based on the value of the previous item</li>
+      <li>a function to transform items before emitting them</li>
+      <li>a function to indicate at what time (expressed as a <code>Date</code>) the generator should emit the
+          the new item</li>
+     </ol><p>
+      You can also pass in as an optional sixth parameter a <a href="../scheduler.html">Scheduler</a> that
+      <code>generate</code> will use to create and emit its sequence (it uses <code>currentThread</code> by
+      default).
+     </p>
+     <h4>Sample Code</h4>
+     <div class="code javascript"><pre>
+var source = Rx.Observable.generate(
+    1,
+    function (x) { return x < 4; },
+    function (x) { return x + 1; },
+    function (x) { return x; },
+    function (x) { return Date.now() + (100 * x); }
+).timeInterval();
+
+var subscription = source.subscribe(
+    function (x) { console.log('Next: ' + x); },
+    function (err) { console.log('Error: ' + err); },
+    function () { console.log('Completed'); });</pre></div>
+     <div class="output"><pre>
+Next: {value: 1, interval: 100}
+Next: {value: 2, interval: 200}
+Next: {value: 3, interval: 300}
+Completed</pre></div>
+     <p>
+      <code>generateWithAbsoluteTime</code> is found in the following distribution:
+     </p>
+     <ul>
+      <li><code>rx.time.js</code> (requires <code>rx.js</code> or <code>rx.compat.js</code>)</li>
+     </ul>
+     </figcaption>
+    </figure>
   {% endlang_operator %}
 
   {% lang_operator RxKotlin create %}
@@ -208,19 +349,19 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
-  {% lang_operator Rx.NET Create %}
+  {% lang_operator Rx.NET Create Generate %}
     <p>
      <span style="color:#f00">TBD</span>
     </p>
   {% endlang_operator %}
 
-  {% lang_operator RxPY create %}
+  {% lang_operator RxPY create generate generate_with_relative_time %}
     <p>
      <span style="color:#f00">TBD</span>
     </p>
   {% endlang_operator %}
 
-  {% lang_operator Rx.rb create %}
+  {% lang_operator Rx.rb create generate %}
     <p>
      <span style="color:#f00">TBD</span>
     </p>
