page for the Subscribe operator
…and its cousin ForEach.
Also: correct BlockingObservable diagrams

--- a/documentation/operators/do.html
+++ b/documentation/operators/do.html
@@ -25,6 +25,7 @@ id: do
 
 <h4>See Also</h4>
 <ul>
+ <li><a href="subscribe.html"><span class="operator">Subscribe</span></a></li>
  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/09_SideEffects.html#Do"><cite>Introduction to Rx</cite>: Do</a></li>
  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/11_AdvancedErrorHandling.html#Finally"><cite>Introduction to Rx</cite>: Finally</a></li>
 </ul>
